# RecipeBox

./: pyproject.toml
Recipe/: Admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
Recipe/migrations/: 0001_initial.py  0002_auto_20200204_1613.py  0003_author_user.py
Recipe/static/author/: style.css
Recipe/static/author_forms/: style.css
Recipe/static/login_form/: style.css
Recipe/static/main/: style.css
Recipe/static/recipe/: style.css
Recipe/static/recipe_forms/: style.css
Recipe/static/signup_form/: style.css
Recipe/templates/: author.html  author_forms.html  login_form.html  main.html  recipe.html  recipe_forms.html  signup_form.html
