[tool.poetry]
name = "recipe"
version = "0.1.0"
description = "A simple recipe app"
authors = ["Joseph Brown <joseph.d.brown94@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.2"
django-crispy-forms = "^1.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
